<resources>
    <string name="app_name">Easy Way</string>

    <string name="facebook_app_id">2469237073300423</string>
    <string name="fb_login_protocol_scheme">fb2469237073300423</string>

    <!--XML default strings-->
    <string name="default_dot"> • </string>
    <string name="default_short">LR</string>
    <string name="default_medium">Lorem</string>
    <string name="default_long">Lorem ipsum dolor</string>
    <string name="default_very_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="welcome_to_easy_way">Welcome to Easy Way.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="by_tapping_one_of_below_login_options_you_accept">By tapping one of below login options, you accept Terms of usage</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="about">About me</string>
    <string name="optionally">Optionally</string>
    <string name="explore_propose">Try \"Camera\"</string>
    <string name="add_offer">Add offer</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="my_offers">My offers</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="contact">Contact</string>
    <string name="description_">Description:</string>
    <string name="notes">Notes:</string>
    <string name="availability">Availability:</string>
    <string name="reviews">Reviews:</string>
    <string name="read_others">Read others</string>
    <string name="see_also">See also:</string>
    <string name="share">Share</string>

    <!--Calendar resources-->
    <!--Miesiące-->
    <string name="fjan">January</string>
    <string name="ffeb">February</string>
    <string name="fmar">March</string>
    <string name="fapr">April</string>
    <string name="fmay">May</string>
    <string name="fjun">June</string>
    <string name="fjul">July</string>
    <string name="faug">August</string>
    <string name="fsep">September</string>
    <string name="foct">October</string>
    <string name="fnov">November</string>
    <string name="fdec">December</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>

    <!--Dni tygodnia-->
    <string name="fmon">Monday</string>
    <string name="ftue">Tuesday</string>
    <string name="fwed">Wednesday</string>
    <string name="fthu">Thursday</string>
    <string name="ffri">Friday</string>
    <string name="fsat">Saturday</string>
    <string name="fsun">Sunday</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <!--Określenia czasu-->
    <string name="in_one_year">in a year</string>
    <string name="in">"in"</string>
    <string name="years">" years"</string>
    <string name="year_ago">year ago</string>
    <string name="years_ago">" years ago"</string>
    <string name="right_now">in a few seconds</string>
    <string name="in_a_minute">" minute"</string>
    <string name="minutes">minutes</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="minute_ago">a minute ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="in_an_hour">an hour</string>
    <string name="hours">hours</string>
    <string name="hours_one_letter">h</string>
    <string name="day_ago">a day ago</string>
    <string name="days_ago">days ago</string>
    <string name="days">days</string>
    <string name="in_a_day_">in a day</string>
    <string name="month_ago">month ago</string>
    <string name="months_ago">months ago</string>
    <string name="month_">month</string>
    <string name="months">months</string>

    <string name="all_day">All day</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_rating">No rating</string>
    <string name="rating">Rating</string>
    <string name="no_bookings_at_this_day">No bookings at this day</string>
    <string name="reserved_for_all_day">Reserved for all day</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="gender">Gender</string>
    <string name="no_similar_items">No similar items</string>
    <string name="title">Title:</string>
    <string name="address_">Address:</string>
    <string name="address">Address</string>
    <string name="price_">Price:</string>
    <string name="zl">zł</string>
    <string name="category_">Category:</string>
    <string name="new_offer">New offer</string>
    <string name="add_another">Add another</string>

    <string name="error_message">Something went wrong</string>
    <string name="photos_added">photos added</string>
    <string name="photos_limit_message">You can add only 3 photos</string>
    <string name="add_more_photos">Add more photos</string>
    <string name="confirmation_delete_photo">Delete this photo? This operation cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirmation_delete_photo_title">Confirming action</string>
    <string name="select_category">Select category</string>
    <string name="error_empty">Shouldn\'t be empty</string>
    <string name="error_email">Wrong email format</string>
    <string name="error_short_password">Too short password</string>
    <string name="error_passwords_not_equals">Password not equals</string>
    <string name="sign_out">Sign out</string>
    <string name="password_hint">At least 8 digits</string>
    <string name="female">Female</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="error_google_sign_in_failed">Google sign in failed</string>
    <string name="verification_email_sended">Verification email sended</string>
    <string name="eror_login_facebook_no_email">No email attached to facebook acount. Please, try another way to sign in</string>
    <string name="refresh">Refresh</string>
    <string name="city_">City:</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="order_by">Order:</string>
    <string name="view">View:</string>
    <string name="list">List</string>
    <string name="cards">Cards</string>
    <string name="all_categories">All categories</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="should_be_bigger_than_from_price">Should be bigger than from-price</string>
    <string name="shouldnt_be_0">Shouldn\'t be 0</string>
    <string name="newest">Newest</string>
    <string name="from_cheapest">From cheapest</string>
    <string name="from_most_expensive">From most expensive</string>
    <string name="about_">About:</string>
    <string name="shared_items">Shared items:</string>
    <string name="no_shared_items">No shared items yet</string>
    <string name="no_info">No info</string>
    <string name="saved_items">Saved items</string>
    <string name="empty_message_liked_offers">You don\'t have saved items yet</string>
    <string name="empty_message_my_offers">You haven\'t offered items yet</string>
    <string name="edit">Edit</string>
    <string name="confirmation_delete_item">Delete this item?</string>
    <string name="save">Save</string>
    <string name="confirmation_closing">Data won\'t save. Are you sure you want to exit?</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="exit">Exit</string>
    <string name="uploading_photo">Uploading photo..</string>
    <string name="uploading_item">Uploading item..</string>
    <string name="confirmation_closing_mode_edit">Edited data won\'t save. Are you sure you want to exit?</string>
    <string name="empty_message_inbox">You don\'t have conversations yet</string>
    <string name="pick_date_range">Pick dates you are interesting in:</string>
    <string name="message_">Message:</string>
    <string name="message">Message</string>
    <string name="type_message">Your message..</string>
    <string name="send">Send</string>
    <string name="error_date_range">Start time should be bigger than end time</string>
    <string name="error_one_day">Shouldn\'t be the same day</string>
    <string name="error_one_hour">Shouldn\'t be in one hour</string>
    <string name="error_different_days">Times should be in one day</string>
    <string name="my_bookings">My bookings</string>
    <string name="my_offers_bookings">Bookings to my offers</string>
    <string name="bookings">Bookings</string>
    <string name="booking_cancel">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="booking_status_finished">Finished</string>
    <string name="booking_status_in_progress">Going now</string>
    <string name="booking_status_canceled">Canceled</string>
    <string name="booking_status_">Status:</string>
    <string name="booking_status_confiremed">confirmed</string>
    <string name="booking_status_requested">waiting for response</string>
    <string name="booking_status_your_response">waiting for response</string>
    <string name="add_review">Add review</string>
    <string name="booking_empty_message_my_bookings">You haven\'t booked any items yet</string>
    <string name="booking_empty_message_bookings_to_ny_offers">No book request to your items yet</string>
    <string name="booking_decline">Decline</string>
    <string name="error_sending_accept_message">Error sending accepting message</string>
    <string name="mark">Mark</string>
    <string name="mark_">Mark:</string>
    <string name="review_">Review:</string>
    <string name="type_review">Your review..</string>
    <string name="booking_canceled">Canceled booking</string>
    <string name="booking_price">Booking price:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="surname_">Surname:</string>
    <string name="birthday_">Birthday:</string>
    <string name="gender_">Gender:</string>
    <string name="updating_user">Updating user data..</string>
</resources>
