<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_accent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.AppCompatImageView-->
        <!--android:id="@+id/welcome_logo"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="24dp"-->
        <!--app:srcCompat="@drawable/logo_round" />-->

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center|start|bottom"
        android:layout_above="@+id/welcome_panel"
        android:text="@string/welcome_to_easy_way"
        android:textColor="@color/icons"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/welcome_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="24dp">

        <Button
            android:id="@+id/welcome_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_round_button_fill"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="18sp" />

        <Button
            android:id="@+id/welcome_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_facebook_button"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_round_button_fill"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="18sp" />

        <Button
            android:id="@+id/welcome_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_google_button"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_round_button_fill"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="18sp" />

        <Button
            android:id="@+id/welcome_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_sign_in"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_round_button_fill"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcome_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:textColor="@color/icons"
        android:textSize="16sp"
        android:gravity="center|start"
        android:text="@string/by_tapping_one_of_below_login_options_you_accept"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/welcome_facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>