<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/first_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/icons">

            <android.support.v7.widget.Toolbar
                android:id="@+id/first_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/AppToolbar"
                app:titleTextColor="@color/primary_text" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/pick_date_range"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_date_from_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_date_from"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24px"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24px"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/from"
                android:inputType="text"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_date_to_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_date_to"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24px"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24px"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/to"
                android:inputType="text"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/message_"
            android:textSize="15sp" />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:hint="@string/type_message"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxHeight="108dp"
            android:maxLines="6"
            android:minHeight="54dp"
            android:minLines="3"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/first_send"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_accent"
            android:text="@string/send"
            android:textColor="@color/icons"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/first_progressbar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="24dp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>