<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/icons">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/profile_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/AppToolbar"
            app:titleTextColor="@color/primary_text" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:id="@+id/profile_no_photo_layout"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/drawable_oval_primary_color"
                android:gravity="center"
                android:visibility="visible">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:tint="@color/icons"
                    app:srcCompat="@drawable/ic_person_white_24px" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/default_long"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_address"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_below="@+id/profile_user_name"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="center|start"
                android:lines="1"
                android:text="@string/default_long"
                android:textColor="@color/color_accent"
                android:textSize="16sp" />

            <View
                android:id="@+id/profile_divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_address"
                android:layout_marginTop="16dp"
                android:background="@color/grey_light" />

            <TextView
                android:id="@+id/profile_about_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_divider1"
                android:layout_marginTop="16dp"
                android:text="@string/about_"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_about_label"
                android:layout_marginTop="4dp"
                android:text="@string/default_very_long"
                android:textSize="16sp" />

            <View
                android:id="@+id/profile_divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_about"
                android:layout_marginTop="16dp"
                android:background="@color/grey_light" />

            <LinearLayout
                android:id="@+id/profile_items_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_divider2"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_items_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shared_items"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/profile_items_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/profile_items_empty_message"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center|start"
                    android:text="@string/no_shared_items"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:id="@+id/profile_divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_items_layout"
                android:layout_marginTop="16dp"
                android:background="@color/grey_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_divider3"
                android:layout_marginBottom="76dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_reviews_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/reviews"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/profile_reviews_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/profile_reviews_read_others"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="4dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center|start"
                    android:text="@string/read_others"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profile_reviews_empty_message"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center|start"
                    android:text="@string/no_reviews_yet"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <View
        android:id="@+id/profile_loading_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/icons"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>