<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_accent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:id="@+id/login_sign_in_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/login_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/icons"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@+id/login_email_label"
            android:layout_marginTop="4dp"
            android:hint=""
            android:inputType="textEmailAddress"
            android:textColor="@color/icons"
            android:textSize="16sp"
            app:backgroundTint="@color/icons" />

        <TextView
            android:id="@+id/login_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/icons"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_label"
            android:layout_marginTop="4dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/icons">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint=""
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/icons"
                android:textSize="16sp"
                app:backgroundTint="@color/icons"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_layout"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_round_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>